Quick update
* Update spec route and docs
* Remove unused storer functions
